TP3 terminados y TP1 funcionando

--- a/TP3/.env
+++ b/TP3/.env
@@ -1,10 +1,10 @@
 # ===== App =====
 APP_ENV=dev
 APP_PORT=8000
-DEFAULT_AGENT=ana            # fallback del router si no detecta destino
+DEFAULT_AGENT=ramiro            # fallback del router si no detecta destino
 
 # ===== Embeddings / NLP =====
-EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+EMBEDDING_MODEL=paraphrase-multilingual-MiniLM-L12-v2
 CHUNK_SIZE=800
 CHUNK_OVERLAP=80
 
@@ -14,11 +14,11 @@ GROQ_MODEL=llama-3.1-8b-instant   # ej.: llama-3.1-70b-versatile | mixtral-8x7b-
 
 # ===== Pinecone =====
 PINECONE_API_KEY=pon_tu_api_key_aqui
-PINECONE_INDEX=rag-demo           # nombre del índice que vas a usar/crear
 PINECONE_NAMESPACE=default        # opcional
 # Para Serverless (SDK nuevo): indicá en qué nube/región crear/usar el índice
 PINECONE_CLOUD=aws                # aws | gcp | azure
 PINECONE_REGION=us-east-1         # ej.: us-east-1, us-west1, eu-west-1
+INDEX_NAME=cv-index
 
 # ===== Logging (opcional) =====
 LOG_LEVEL=INFO
